# AIDetection

./: .gitignore  ANALYSIS_AND_IMPROVEMENTS.md  CODEBASE_STATUS.md  CODEBASE_VERIFICATION.md  FINAL-VERIFICATION.md  LICENSE  PHASE1-COMPLETE.md  PRODUCTION_HARDENING_COMPLETE.md  PRODUCTION_READY.md  PUBLISH_CHECKLIST.md  README.md  RELEASE_NOTES.md  SECURITY.md  SECURITY_AUDIT.md  SUPPORT.md  USAGE.md  build.bat  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_aidetect.py  test-aidetect.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
PRD and Tasks/: generate-tasks.mdc
aidetect/: __init__.py  cli.py
aidetect/analysis/: __init__.py  artifacts.py  calibration.py  compression.py  ensemble.py  evidence.py  frequency.py  metadata.py  pixel_stats.py  quality.py  registry.py  texture.py
aidetect/core/: __init__.py  branding.py  config.py  dependencies.py  determinism.py  logging.py  types.py
aidetect/io/: __init__.py  image_loader.py
assets/: brand_banner.txt
docs/: accuracy-phase1-results.md  evaluation.md  metadata-signatures.md  reporting-improvements.md
scripts/: benchmark_accuracy.py  benchmark_performance.py  validate_accuracy.py
tasks/: prd-forensic-ai-detection-tool.md  tasks-accuracy-improvements-phase1.md  tasks-corrections.md  tasks-false-positive-reduction.md  tasks-prd-forensic-ai-detection-tool.md
tests/: test_analysis.py  test_cli.py  test_cli_about.py  test_core.py  test_packaging.py  test_reporting.py  test_runners.py
(+13 files in other folders)
